--- a/RemoteController/RemoteController.WinUi/Views/Pages/GenericPage.xaml
+++ b/RemoteController/RemoteController.WinUi/Views/Pages/GenericPage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="RemoteController.WinUi.Views.GenericPage"
+    x:Class="RemoteController.WinUi.Views.Pages.GenericPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
