--- a/RemoteController/RemoteController.WinUi/Views/Pages/HotkeysPage.xaml
+++ b/RemoteController/RemoteController.WinUi/Views/Pages/HotkeysPage.xaml
@@ -1,5 +1,5 @@
 ﻿<cc:PageWithHeaderContent
-    x:Class="RemoteController.WinUi.Views.HotkeysPage"
+    x:Class="RemoteController.WinUi.Views.Pages.HotkeysPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
