--- a/RemoteController/RemoteController.WinUi/Views/Pages/SoundDevicesPage.xaml
+++ b/RemoteController/RemoteController.WinUi/Views/Pages/SoundDevicesPage.xaml
@@ -14,8 +14,23 @@
             <winUi:SettingsCard 
                 HeaderIcon="{ui:FontIcon Glyph=&#xE7F5;}"
                 Header="{Binding Name}">
-                <ToggleSwitch
-                    IsOn="{Binding IsSelected, Mode=TwoWay}" />
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock
+                        Text="Default"
+                        VerticalAlignment="Center"
+                        Visibility="{Binding IsSystemDefault, Converter={StaticResource Converter.TrueToVisible}}"
+                        />
+                    <Button
+                        VerticalAlignment="Center"
+                        Content="Make default" 
+                        Command="{Binding MakeSystemDefaultCommand}"
+                        Visibility="{Binding IsSystemDefault, Converter={StaticResource Converter.FalseToVisible}}"
+                        />
+                    <ToggleSwitch
+                        Margin="16 0 0 0"
+                        VerticalAlignment="Center"
+                        IsOn="{Binding IsSelected, Mode=TwoWay}" />
+                </StackPanel>
             </winUi:SettingsCard>
         </DataTemplate>
         <DataTemplate x:DataType="viewModels:DeviceViewModel" x:Key="DataTemplate.DeviceViewModel.Input">
