--- a/RemoteController/RemoteController.WinUi/Views/Pages/FoldersPage.xaml
+++ b/RemoteController/RemoteController.WinUi/Views/Pages/FoldersPage.xaml
@@ -57,13 +57,13 @@
         </DataTemplate>
     </Page.Resources>
 
-    <ListView
-        ScrollViewer.HorizontalScrollMode="Disabled"
-        ItemsSource="{x:Bind ViewModel.Paths, Mode=OneWay}"
-        ItemTemplate="{StaticResource DataTemplate.FileSystemPath}"
-        >
-        <ListView.Header>
-            <StackPanel Orientation="Vertical">
+    <Grid>
+        <ListView
+            ScrollViewer.HorizontalScrollMode="Disabled"
+            ItemsSource="{x:Bind ViewModel.Paths, Mode=OneWay}"
+            ItemTemplate="{StaticResource DataTemplate.FileSystemPath}"
+            >
+            <ListView.Header>
                 <winUi:SettingsCard
                     HeaderIcon="{ui:FontIcon Glyph=&#xE8F4;}"
                     Header="Create public folder"
@@ -73,57 +73,63 @@
                     IsClickEnabled="True"
                     Margin="0 0 0 20"
                     />
-                <ContentDialog 
-                    x:Name="CreateDialog"
-                    PrimaryButtonText="Create"
-                    PrimaryButtonClick="CreateDialog_OnPrimaryButtonClick"
-                    SecondaryButtonText="Cancel"
-                    >
-                    <StackPanel 
-                        MinWidth="500"
-                        Orientation="Vertical">
-                        <TextBox 
-                            x:Name="CreateName"
-                            TextChanged="CreateName_OnTextChanged"
-                            Header="Enter name:"
-                            PlaceholderText="Name"/>
-                        <TextBlock 
-                            x:Name="CreateNameValidation"
-                            Text="Name cannot be empty or whitespace and must be unique." 
-                            Foreground="{StaticResource Brush.Error.Dark}"
-                            Visibility="Collapsed"
-                            />
-                        <Grid Margin="0 4">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="Auto" />
-                                <ColumnDefinition Width="*" />
-                                <ColumnDefinition Width="Auto" />
-                            </Grid.ColumnDefinitions>
-                            <TextBlock 
-                                Grid.Column="0"
-                                Text="Path: " 
-                                VerticalAlignment="Center"/>
-                            <TextBlock 
-                                x:Name="CreatePath"
-                                Grid.Column="1"
-                                Margin="8 0"
-                                VerticalAlignment="Center"
-                                ToolTipService.ToolTip="{x:Bind CreatePath.Text}"
-                                TextTrimming="CharacterEllipsis" />
-                            <Button
-                                Grid.Column="2"
-                                Click="CreateForm_OnPathClick"
-                                Content="Select path" />
-                        </Grid>
-                        <TextBlock 
-                            x:Name="CreatePathValidation"
-                            Text="Path must be unique." 
-                            Foreground="{StaticResource Brush.Error.Dark}"
-                            Visibility="Collapsed"
-                            />
-                    </StackPanel>
-                </ContentDialog>
+            </ListView.Header>
+        </ListView>
+        <ContentDialog 
+            x:Name="ErrorDialog"
+            Title = "Error"
+            Content = "Selected folder already in use by another item."
+            CloseButtonText = "Ok"
+            />
+        <ContentDialog 
+            x:Name="CreateDialog"
+            PrimaryButtonText="Create"
+            PrimaryButtonClick="CreateDialog_OnPrimaryButtonClick"
+            SecondaryButtonText="Cancel"
+            >
+            <StackPanel 
+                MinWidth="500"
+                Orientation="Vertical">
+                <TextBox 
+                    x:Name="CreateName"
+                    TextChanged="CreateName_OnTextChanged"
+                    Header="Enter name:"
+                    PlaceholderText="Name"/>
+                <TextBlock 
+                    x:Name="CreateNameValidation"
+                    Text="Name cannot be empty or whitespace and must be unique." 
+                    Foreground="{StaticResource Brush.Error.Dark}"
+                    Visibility="Collapsed"
+                    />
+                <Grid Margin="0 4">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="Auto" />
+                    </Grid.ColumnDefinitions>
+                    <TextBlock 
+                        Grid.Column="0"
+                        Text="Path: " 
+                        VerticalAlignment="Center"/>
+                    <TextBlock 
+                        x:Name="CreatePath"
+                        Grid.Column="1"
+                        Margin="8 0"
+                        VerticalAlignment="Center"
+                        ToolTipService.ToolTip="{x:Bind CreatePath.Text}"
+                        TextTrimming="CharacterEllipsis" />
+                    <Button
+                        Grid.Column="2"
+                        Click="CreateForm_OnPathClick"
+                        Content="Select path" />
+                </Grid>
+                <TextBlock 
+                    x:Name="CreatePathValidation"
+                    Text="Path must be unique." 
+                    Foreground="{StaticResource Brush.Error.Dark}"
+                    Visibility="Collapsed"
+                    />
             </StackPanel>
-        </ListView.Header>
-    </ListView>
+        </ContentDialog>
+    </Grid>
 </Page>
