Add converter for volume sliders.

--- a/RemoteController/RemoteController.WinUi/Styles/Converters.xaml
+++ b/RemoteController/RemoteController.WinUi/Styles/Converters.xaml
@@ -10,4 +10,7 @@
         TrueVisibility="Collapsed"
         FalseVisibility="Visible" />
     <c:GestureToVirtualKeysConverter x:Key="Converter.GestureToVirtualKeys" />
+    <c:SliderTooltipConverter 
+        x:Key="Converter.SliderTooltip.Volume" 
+        LeftPart="Volume: " />
 </ResourceDictionary>
