--- a/RemoteController/RemoteController.WinUi/Styles/Controls/GestureVisual.xaml
+++ b/RemoteController/RemoteController.WinUi/Styles/Controls/GestureVisual.xaml
@@ -12,6 +12,12 @@
             Key="{Binding}" 
             IsTabStop="False" />
     </DataTemplate>
+    <DataTemplate x:Key="GestureVisual.ItemTemplate.Large" d:DataContext="{d:DesignInstance system:VirtualKey}">
+        <c:VirtualKeyVisual 
+            Style="{StaticResource VirtualKeyVisual.Style.Large}"
+            Key="{Binding}" 
+            IsTabStop="False" />
+    </DataTemplate>
 
     <ControlTemplate 
         x:Key="GestureVisual.Template"
@@ -39,11 +45,36 @@
             </StackPanel>
         </Button>
     </ControlTemplate>
+    <ControlTemplate 
+        x:Key="GestureVisual.Template.Large"
+        TargetType="c:GestureVisual">
+        <Button CornerRadius="{TemplateBinding CornerRadius}">
+            <StackPanel Orientation="Horizontal">
+                <ItemsControl
+                    ItemsSource="{TemplateBinding Keys}" 
+                    ItemTemplate="{StaticResource GestureVisual.ItemTemplate.Large}">
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <StackPanel 
+                                Orientation="Horizontal" 
+                                Spacing="8" />
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                </ItemsControl>
+
+                <!--TODO: Make Edit icon visible and functional.-->
+                <FontIcon
+                    FontFamily="{ThemeResource SymbolThemeFontFamily}"
+                    FontSize="16"
+                    Glyph="&#xE70F;"
+                    Visibility="Collapsed"/>
+            </StackPanel>
+        </Button>
+    </ControlTemplate>
+
     <Style TargetType="c:GestureVisual"
            x:Key="GestureVisual.Style">
-
         <Setter Property="IsTabStop" Value="False" />
-
         <Setter Property="Template" Value="{StaticResource GestureVisual.Template}" />
         <Setter Property="HorizontalContentAlignment" Value="Left" />
         <Setter Property="HorizontalAlignment" Value="Left" />
@@ -56,6 +87,11 @@
 
     <!--Default style-->
     <Style TargetType="c:GestureVisual"
-           BasedOn="{StaticResource GestureVisual.Style}"
-           />
+           BasedOn="{StaticResource GestureVisual.Style}" />
+
+    <Style TargetType="c:GestureVisual"
+           x:Key="GestureVisual.Style.Large"
+           BasedOn="{StaticResource GestureVisual.Style}">
+        <Setter Property="Template" Value="{StaticResource GestureVisual.Template.Large}" />
+    </Style>
 </ResourceDictionary>
