--- a/RemoteController/RemoteController.WinUi/Styles/Controls/MultiKeyGestureVisual.xaml
+++ b/RemoteController/RemoteController.WinUi/Styles/Controls/MultiKeyGestureVisual.xaml
@@ -19,6 +19,11 @@
     <DataTemplate x:Key="MultiKeyGestureVisual.ItemTemplate" d:DataContext="{d:DesignInstance gestures:Gesture}">
         <c:GestureVisual Gesture="{Binding}" />
     </DataTemplate>
+    <DataTemplate x:Key="MultiKeyGestureVisual.ItemTemplate.Large" d:DataContext="{d:DesignInstance gestures:Gesture}">
+        <c:GestureVisual
+            Style="{StaticResource GestureVisual.Style.Large}"
+            Gesture="{Binding}" />
+    </DataTemplate>
 
     <ControlTemplate 
         x:Key="MultiKeyGestureVisual.Template"
@@ -34,6 +39,20 @@
                 />
         </Border>
     </ControlTemplate>
+    <ControlTemplate 
+        x:Key="MultiKeyGestureVisual.Template.Large"
+        TargetType="c:MultiKeyGestureVisual">
+        <Border 
+            CornerRadius="{TemplateBinding CornerRadius}"
+            Background="{TemplateBinding Background}"
+            Padding="{TemplateBinding Padding}">
+            <ItemsControl
+                ItemsSource="{TemplateBinding Gestures}" 
+                ItemTemplate="{StaticResource MultiKeyGestureVisual.ItemTemplate.Large}"
+                ItemsPanel="{StaticResource MultiKeyGestureVisual.ItemsPanelTemplate}"
+            />
+        </Border>
+    </ControlTemplate>
     <Style TargetType="c:MultiKeyGestureVisual"
            x:Key="MultiKeyGestureVisual.Style">
         <Setter Property="Template" Value="{StaticResource MultiKeyGestureVisual.Template}" />
@@ -47,4 +66,10 @@
     <Style TargetType="c:MultiKeyGestureVisual"
            BasedOn="{StaticResource MultiKeyGestureVisual.Style}"
            />
+
+    <Style TargetType="c:MultiKeyGestureVisual"
+           x:Key="MultiKeyGestureVisual.Style.Large"
+           BasedOn="{StaticResource MultiKeyGestureVisual.Style}">
+        <Setter Property="Template" Value="{StaticResource MultiKeyGestureVisual.Template.Large}" />
+    </Style>
 </ResourceDictionary>
