--- a/RemoteController/RemoteController.WinUi/Controls/HotkeyDialog.xaml
+++ b/RemoteController/RemoteController.WinUi/Controls/HotkeyDialog.xaml
@@ -2,7 +2,6 @@
     x:Class="RemoteController.WinUi.Controls.HotkeyDialog"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:RemoteController.WinUi.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
@@ -20,5 +19,26 @@
             <Run Text="Gesture:" />
             <Run Text="{x:Bind ViewModel.GestureEditor.MultiKeyGesture, Mode=OneWay}" />
         </TextBlock>
+
+        <ScrollViewer
+            MaxHeight="500">
+            <StackPanel Orientation="Vertical">
+                <ItemsRepeater
+                    ItemsSource="{x:Bind Items}"
+                    Margin="0 4">
+                    <ItemsRepeater.Layout>
+                        <StackLayout 
+                            Orientation="Vertical" 
+                            Spacing="4" />
+                    </ItemsRepeater.Layout>
+                </ItemsRepeater>
+
+                <Button 
+                    HorizontalAlignment="Stretch"
+                    Height="40"
+                    Command="{x:Bind AddItemCommand}"
+                    Content="Add" />
+            </StackPanel>
+        </ScrollViewer>
     </StackPanel>
 </ContentDialog>
