--- a/RemoteController/RemoteController.WinUi/Styles/Controls/KeyVisual.xaml
+++ b/RemoteController/RemoteController.WinUi/Styles/Controls/KeyVisual.xaml
@@ -74,8 +74,7 @@
     <Style 
          x:Key="DefaultTextKeyVisualStyle" 
          TargetType="c:KeyVisual"
-         BasedOn="{StaticResource KeyVisual.Style.Default}">
-    </Style>
+         BasedOn="{StaticResource KeyVisual.Style.Default}" />
 
     <Style
          x:Key="KeyVisual.Style.Text.Small"
