--- a/RemoteController/RemoteController.WinUi/Controls/HotkeyDialog.xaml
+++ b/RemoteController/RemoteController.WinUi/Controls/HotkeyDialog.xaml
@@ -37,6 +37,7 @@
                     HorizontalAlignment="Stretch"
                     Height="40"
                     Command="{x:Bind AddItemCommand}"
+                    IsEnabled="{x:Bind ViewModel.CanAddItem, Mode=OneWay}"
                     Content="Add" />
             </StackPanel>
         </ScrollViewer>
